Fix start windows script